--- a/index.html
+++ b/index.html
@@ -19,56 +19,56 @@
                 </div>
                 <div class="raws">
                     <div class="buttonBack">
-                        <button onclick="bClick(7)" id="num7">7</button>
+                        <button onclick="bClick(7)" class="btn" id="num7">7</button>
                     </div>
                     <div class="buttonBack">
-                        <button onclick="bClick(8)" id="num8">8</button>
+                        <button onclick="bClick(8)" class="btn" id="num8">8</button>
                     </div>
                     <div class="buttonBack">
-                        <button onclick="bClick(9)" id="num9">9</button>
+                        <button onclick="bClick(9)" class="btn" id="num9">9</button>
                     </div>
                     <div class="buttonBack">
-                        <button onclick="bClick('+')"  id="plus">+</button>
+                        <button onclick="bClick('+')"  class="btn" id="plus">+</button>
                     </div>
                 </div>
                 <div class="raws">
                     
                     <div class="buttonBack">
-                        <button onclick="bClick(4)"  id="num4">4</button>
+                        <button onclick="bClick(4)"  class="btn" id="num4">4</button>
                     </div>
                     <div class="buttonBack">
-                        <button onclick="bClick(5)"  id="num5">5</button>
+                        <button onclick="bClick(5)"  class="btn" id="num5">5</button>
                     </div>
                     <div class="buttonBack">
-                        <button onclick="bClick(6)"  id="num6">6</button>
+                        <button onclick="bClick(6)"  class="btn" id="num6">6</button>
                     </div>
                     <div class="buttonBack">
-                        <button onclick="bClick('-')"  id="minus">-</button>
-                    </div>
-                </div>
-                <div class="raws">
-                    <div class="buttonBack">
-                        <button onclick="bClick(1)"  id="num1">1</button>
-                    </div>
-                    <div class="buttonBack">
-                        <button onclick="bClick(2)"  id="num2">2</button>
-                    </div>
-                    <div class="buttonBack">
-                        <button onclick="bClick(3)"  id="num3">3</button>
-                    </div>
-                    <div class="buttonBack">
-                        <button onclick="bClick('*')"  id="star">×</button>
+                        <button onclick="bClick('-')"  class="btn" id="minus">-</button>
                     </div>
                 </div>
                 <div class="raws">
                     <div class="buttonBack">
-                        <button onclick="bClick(0)" id="num0">0</button>
+                        <button onclick="bClick(1)"  class="btn" id="num1">1</button>
                     </div>
                     <div class="buttonBack">
-                        <button id="dot">.</button>
+                        <button onclick="bClick(2)"  class="btn" id="num2">2</button>
                     </div>
                     <div class="buttonBack">
-                        <button onclick="bClick('/')"  id="slash">÷</button>
+                        <button onclick="bClick(3)"  class="btn" id="num3">3</button>
+                    </div>
+                    <div class="buttonBack">
+                        <button onclick="bClick('*')"  class="btn" id="star">×</button>
+                    </div>
+                </div>
+                <div class="raws">
+                    <div class="buttonBack">
+                        <button onclick="bClick(0)" class="btn" id="num0">0</button>
+                    </div>
+                    <div class="buttonBack">
+                        <button class="btn" id="dot">.</button>
+                    </div>
+                    <div class="buttonBack">
+                        <button onclick="bClick('/')"  class="btn" id="slash">÷</button>
                     </div>
                     <div class="buttonBack">
                         <button onclick="equalTo()"  id="equalto">=</button>
