--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
              
            }else{
                if(display.value==226){
-                   display.value = 'Hello, Donkey😹💀';
+                   display.value = 'Hi, Vaazhee 🌱';
                
               size = document.getElementById( 'screen' );
               size.style.fontSize = "250%" ;
