--- a/secondpage.html
+++ b/secondpage.html
@@ -9,13 +9,18 @@
            .root{
                height: 100%;
                width: 100%;
-               margin-top: 70px;
+               
                
            }
         </style>
     </head>
     <body>
         <div class="root">
+            <h3 style="margin-left: 11%">Click the banner to follow me</h3>
+            <a href="https://www.instagram.com/psy_co_soul_46">
+            <img src="follow.png" style="width: 350px; height: 110px;">
+            </a>
+
              <label style="font-size: 30px; width: 100%; margin-top: 100px;  ">Nokkanda Nee thanneyaa 😌🌱</label>
              <a href="index.html">
                  <img src="vazha.jpeg" style="width: 370px; height: 300px; ">
