--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <button id="nullbtn"> </button>
                 </div>
                 <div class="buttonBack">
-                    <img src="images/back.png" onclick="backClick" id="backBtn">
+                    <img src="back.png" onclick="backClick" id="backBtn">
                 </div>
             </div>
             <div class="raws">
