--- a/index.html
+++ b/index.html
@@ -12,11 +12,18 @@
             width: 100%;
             margin: 0;
             font-style: bold;
+            display: flex;
+            justify-content: center;
+            align-items: center;
 
         }
         .rootDiv {
-            height: 100%;
-            width: 100%;
+            
+            height: 290px;
+            width: 400px;
+            border: 1;
+            border-color: #000000;
+            border-radius: 10;
         }
         .topScreen {
             height: 30%;
@@ -25,6 +32,7 @@
 
         }
         .bottomScreen {
+            margin-top: 120px;
             height: 70%;
             width: 100%;
             background: white;
@@ -35,7 +43,7 @@
             color: red;
             pointer-events: none;
             border: 0;
-            margin-top: 130px;
+            margin-top: 110px;
             margin-left: 5px;
         }
         .raws {
