--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             
             height: 290px;
             width: 400px;
-            border: 1;
+            border: 1px;
             border-color: #000000;
-            border-radius: 10;
+            border-radius: 10px;
         }
         .topScreen {
             height: 30%;
