--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+   
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" user-scalable=no content="width=device-width, initial-scale=1.0">
 
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <link rel= “manifest” href= “manifest.json” />
     <title>Calculator</title>
     <style>
         body {
