--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <link rel= “manifest” href= “manifest.json” />
     <title>Calculator</title>
+    <link rel="icon" type="image/x-icon" href="logo.png">
     <style>
         body {
             height: 100%;
