--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Calculator</title>
     <link rel="icon" type="image/x-icon" href="logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+
     <style>
         body {
             height: 100%;
@@ -139,14 +139,23 @@
 </head>
 <body>
     <header>
-        <div class="row">
-            <div class="col-6 justify-content-center">
-                <h2 class="justify-content-center">PairCalc</h2>
-            </div>
-            <div class="col-6"></div>
-        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-6" style="padding-top:14px">
 
+                    <a href="">
+                        <img class="my-auto" style="height:30px" src="images/headerlogo.jpg">
+                    </a>
+
+
+                </div>
+
+
+                <div class="col-6"></div>
+            </div>
+        </div>
         <hr>
+
     </header>
     <div class="rootDiv">
         <div class="topScreen">
@@ -234,6 +243,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.min.js" integrity="sha384-Rx+T1VzGupg4BHQYs2gCW9It+akI2MM/mndMCy36UVfodzcJcF0GGLxZIzObiEfa" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 
     <script>
         function bClick(val) {
