--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <div class="col-6" style="padding-top:14px">
 
                     <a href="">
-                        <img class="my-auto" style="height:30px" src="images/headerlogo.jpg">
+                        <img class="my-auto" style="height:30px" src="headerlogo.jpg">
                     </a>
 
 
