--- a/index.html
+++ b/index.html
@@ -142,20 +142,18 @@
         <div class="container">
             <div class="row">
                 <div class="col-6" style="padding-top:14px">
-
                     <a href="">
                         <img class="my-auto" style="height:30px" src="headerlogo.jpg">
                     </a>
-
-
                 </div>
-
-
-                <div class="col-6"></div>
+                <div class="col-6" style="padding-top:14px">
+                    <a style="float: right" href="about.html">
+                        <img style="height:30px" src="about.png" alt="">
+                    </a>
+                </div>
             </div>
         </div>
         <hr>
-
     </header>
     <div class="rootDiv">
         <div class="topScreen">
